# agent-guardrails

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  tox.ini
.agents/skills/create-lint/: SKILL.md
.agents/skills/create-lint/references/: pre_commit_conventions.md
.agents/skills/onboard-project/: SKILL.md
.github/workflows/: main.yml
agent_guardrails/: __init__.py
agent_guardrails/general/: __init__.py  lint_file_line_count.py  lint_no_chinese.py  lint_no_ignored_files.py  lint_pre_commit_hook_languages.py
agent_guardrails/python/: __init__.py  lint_backend_bare_dict.py  lint_enum_redundant_string.py  lint_pep723_header.py  uv_lock_check.py
agent_guardrails/shell/: __init__.py  lint_shell_portability.py
general/: lint_no_chinese.py  lint_pre_commit_hook_languages.py
python/: lint_backend_bare_dict.py  lint_enum_redundant_string.py
shell/: lint_shell_portability.py
tests/: _pep723_fixtures.py  test_hook_repository.py  test_lint_no_ignored_files.py  test_published_python_hook_entrypoints.py
