[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-guardrails"
version = "0.1.0"
description = "Shared pre-commit hooks for repository guardrails."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.setuptools.packages.find]
include = ["agent_guardrails*"]
