[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-guardrails"
version = "0.1.0"
description = "Shared pre-commit hooks for repository guardrails."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

[project.scripts]
lint-backend-bare-dict = "agent_guardrails.python.lint_backend_bare_dict:main"
lint-enum-redundant-string = "agent_guardrails.python.lint_enum_redundant_string:main"
lint-file-line-count = "agent_guardrails.general.lint_file_line_count:main"
lint-no-chinese = "agent_guardrails.general.lint_no_chinese:main"
lint-pre-commit-hook-languages = "agent_guardrails.general.lint_pre_commit_hook_languages:main"
lint-shell-portability = "agent_guardrails.shell.lint_shell_portability:main"
uv-lock-check = "agent_guardrails.python.uv_lock_check:main"

[tool.setuptools.packages.find]
include = ["agent_guardrails*"]
